消息打招呼

--- a/chatinput/src/main/res/layout/view_chatinput.xml
+++ b/chatinput/src/main/res/layout/view_chatinput.xml
@@ -1,46 +1,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#fff"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="#fff"
+              android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/aurora_ll_input_container1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="horizontal"></LinearLayout>
+            android:id="@+id/aurora_ll_input_container1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"></LinearLayout>
 
     <LinearLayout
-        android:id="@+id/aurora_ll_input_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:orientation="horizontal"
-       >
+            android:id="@+id/aurora_ll_input_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom"
+            android:orientation="horizontal"
+    >
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:gravity="left|center_vertical"
-            android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:gravity="left|center_vertical"
+                android:orientation="horizontal"
 
-            >
+        >
 
 
             <TextView
-                android:id="@+id/changyongyu"
-                android:layout_width="50dp"
-                android:layout_height="28dp"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/radius_button_theme"
-                android:gravity="center"
-                android:text="常用語"
-                android:textColor="@color/white"
-                android:textSize="13sp"
+                    android:id="@+id/changyongyu"
+                    android:layout_width="50dp"
+                    android:layout_height="28dp"
+                    android:layout_marginLeft="15dp"
+                    android:background="@drawable/radius_button_theme"
+                    android:gravity="center"
+                    android:text="常用語"
+                    android:textColor="@color/white"
+                    android:textSize="13sp"
 
-                />
+            />
 
 
         </LinearLayout>
@@ -54,65 +54,65 @@
         <!--android:maxLines="1"-->
         <!--android:singleLine="true" />-->
         <cn.jiguang.imui.chatinput.emoji.widget.EmoticonsEditText
-            android:id="@+id/aurora_et_chat_input1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_weight="800000000"
-            android:cursorVisible="true"
-            android:focusableInTouchMode="true"
-            android:gravity="bottom"
-            android:hint="新着メッセージ"
-            android:imeOptions="actionSend"
-            android:inputType="textMultiLine"
-            android:maxLines="4"
-            android:minHeight="48dp"
-            android:paddingLeft="4dp"
-            android:paddingTop="5dp"
-            android:paddingRight="4dp"
-            android:paddingBottom="15dp"
-            android:textColor="@android:color/black"
-            android:textColorHint="#B3B3B3"
-            android:textCursorDrawable="@drawable/aurora_edittext_cursor_bg"
-            android:textSize="14sp" />
+                android:id="@+id/aurora_et_chat_input1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="800000000"
+                android:cursorVisible="true"
+                android:focusableInTouchMode="true"
+                android:gravity="bottom"
+                android:hint="新着メッセージ"
+                android:imeOptions="actionSend"
+                android:inputType="textMultiLine"
+                android:maxLines="4"
+                android:minHeight="48dp"
+                android:paddingLeft="4dp"
+                android:paddingTop="5dp"
+                android:paddingRight="4dp"
+                android:paddingBottom="15dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="#B3B3B3"
+                android:textCursorDrawable="@drawable/aurora_edittext_cursor_bg"
+                android:textSize="14sp"/>
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:gravity="right|center_vertical"
-            android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:gravity="right|center_vertical"
+                android:orientation="horizontal"
 
-            >
-
-
-            <ImageView
-                android:id="@+id/menuItemVoice"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_marginRight="15dp"
-                android:src="@drawable/ico_voice" />
-
-            <ImageView
-                android:id="@+id/menuItemSmile"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_marginRight="15dp"
-                android:src="@drawable/ico_smile"
-
-                />
+        >
 
 
             <ImageView
-                android:id="@+id/menuItemHideOrShow"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_marginRight="15dp"
-                android:src="@drawable/ico_add"
+                    android:id="@+id/menuItemVoice"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginRight="15dp"
+                    android:src="@drawable/ico_voice"/>
 
-                />
+            <ImageView
+                    android:id="@+id/menuItemSmile"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginRight="15dp"
+                    android:src="@drawable/ico_smile"
+
+            />
+
+
+            <ImageView
+                    android:id="@+id/menuItemHideOrShow"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginRight="15dp"
+                    android:src="@drawable/ico_add"
+
+            />
 
 
         </LinearLayout>
@@ -122,75 +122,79 @@
 
 
     <LinearLayout
-        android:id="@+id/my_menuitem_container"
-        android:layout_width="match_parent"
-        android:layout_height="103dp"
-        android:orientation="vertical"
-        android:visibility="gone">
+            android:id="@+id/my_menuitem_container"
+            android:layout_width="match_parent"
+            android:layout_height="103dp"
+            android:orientation="vertical"
+            android:visibility="gone">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#d8d8d8"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#d8d8d8"
 
 
-            />
+        />
 
 
         <include
 
 
-            android:id="@+id/aurora_ll_menuitem_container"
+                android:id="@+id/aurora_ll_menuitem_container"
 
-            layout="@layout/layout_chatinput_menu" />
+                layout="@layout/layout_chatinput_menu"/>
 
 
     </LinearLayout>
 
 
     <FrameLayout
-        android:id="@+id/my_menu_container_fake"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"></FrameLayout>
+            android:id="@+id/my_menu_container_fake"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"></FrameLayout>
 
 
     <FrameLayout
-        android:id="@+id/my_menu_area_container"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:gravity="center"
-        android:visibility="gone">
-
-        <include
-            android:id="@+id/aurora_rl_recordvoice_container"
-            layout="@layout/layout_chatinput_recordvoice" />
-
-        <cn.jiguang.imui.chatinput.photo.SelectPhotoView
-            android:id="@+id/aurora_view_selectphoto"
+            android:id="@+id/my_menu_area_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
-
-        <include
-            android:id="@+id/aurora_fl_camera_container"
-            layout="@layout/layout_chatinput_camera"
-            android:visibility="gone" />
-
-        <cn.jiguang.imui.chatinput.emoji.EmojiView
-            android:id="@+id/aurora_rl_emoji_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
-
-
-        <LinearLayout
-            android:id="@+id/chagnyongyu_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="200dp"
+            android:gravity="center"
             android:visibility="gone">
 
-        </LinearLayout>
+        <include
+                android:id="@+id/aurora_rl_recordvoice_container"
+                layout="@layout/layout_chatinput_recordvoice"/>
+
+        <cn.jiguang.imui.chatinput.photo.SelectPhotoView
+                android:id="@+id/aurora_view_selectphoto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"/>
+
+        <include
+                android:id="@+id/aurora_fl_camera_container"
+                layout="@layout/layout_chatinput_camera"
+                android:visibility="gone"/>
+
+        <cn.jiguang.imui.chatinput.emoji.EmojiView
+                android:id="@+id/aurora_rl_emoji_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"/>
+
+        <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+        >
+            <LinearLayout
+                    android:id="@+id/chagnyongyu_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+            </LinearLayout>
+        </ScrollView>
 
     </FrameLayout>
 </LinearLayout>
