--- a/chatinput/src/main/res/layout/changyongyu.xml
+++ b/chatinput/src/main/res/layout/changyongyu.xml
@@ -16,7 +16,8 @@
     <TextView
         android:id="@+id/changyongyuItem"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="wrap_content"
+        android:minHeight="50dp"
         android:textSize="13sp"
         android:textColor="#333"
         android:text=""
