--- a/messagelist/src/main/res/layout/item_send_photo.xml
+++ b/messagelist/src/main/res/layout/item_send_photo.xml
@@ -53,12 +53,12 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:adjustViewBounds="true"
-            android:background="#000"
+            android:background="@color/white"
             android:layout_below="@+id/aurora_tv_msgitem_sender_display_name"
             android:layout_toLeftOf="@+id/aurora_iv_msgitem_avatar"
             android:maxHeight="200dp"
             android:maxWidth="200dp"
-            android:src="@drawable/aurora_picture_not_found"
+            android:src="@drawable/no_pic_show"
             android:padding="0dp"
             app:photoMessageRadius="8dp"
             />
