--- a/messagelist/src/main/res/layout/job_info.xml
+++ b/messagelist/src/main/res/layout/job_info.xml
@@ -245,7 +245,7 @@
             >
 
 
-                <ImageView
+                <cn.jiguang.imui.view.RoundImageView
                         android:id="@+id/userlogo"
                         android:src="@drawable/default_avatar"
                         android:layout_height="28dp"
