--- a/chatinput/src/main/res/layout/view_chatinput.xml
+++ b/chatinput/src/main/res/layout/view_chatinput.xml
@@ -53,6 +53,10 @@
         <!--android:inputType="text"-->
         <!--android:maxLines="1"-->
         <!--android:singleLine="true" />-->
+
+        <!--android:inputType="textMultiLine"-->
+        <!--android:maxLines="4"-->
+
         <cn.jiguang.imui.chatinput.emoji.widget.EmoticonsEditText
                 android:id="@+id/aurora_et_chat_input1"
                 android:layout_width="0dp"
@@ -65,8 +69,7 @@
                 android:gravity="bottom"
                 android:hint="新着メッセージ"
                 android:imeOptions="actionSend"
-                android:inputType="textMultiLine"
-                android:maxLines="4"
+                android:singleLine="true"
                 android:minHeight="48dp"
                 android:paddingLeft="4dp"
                 android:paddingTop="5dp"
