--- a/app/src/main/res/layout/radion_gender.xml
+++ b/app/src/main/res/layout/radion_gender.xml
@@ -2,10 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/LinearLayout1"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_gravity="center"
-              android:orientation="vertical">
+              android:gravity="right">
 
     <RadioGroup
             android:id="@+id/radioGroup"
