--- a/app/src/main/res/layout/jobwant_list.xml
+++ b/app/src/main/res/layout/jobwant_list.xml
@@ -24,6 +24,9 @@
                           android:layout_marginRight="12dp"
                           android:textSize="12sp"
                           android:textColor="@color/gray89"
+                          android:maxLines="1"
+                          android:maxEms="11"
+                          android:ellipsize="end"
                           android:layout_height="wrap_content"/>
 
                 <TextView android:layout_width="wrap_content"
