修改附件简历部分错误

--- a/app/src/main/res/values/prompt.xml
+++ b/app/src/main/res/values/prompt.xml
@@ -6,4 +6,11 @@
     <string name="piEmailError">邮箱格式不正确</string>
     <string name="piPhoneError">号码格式不正确</string>
     <string name="piStateEmpty">工作状态不可为空</string>
+
+   <!--ResumeListActivity-->
+    <string name="resumeReNameError">简历更名出错</string>
+
+   <!--SendResumeActivity-->
+  <string name="sendResumeResult">发送简历成功</string>
+  <string name="sendResumeError">发送简历失败</string>
 </resources>
