更改求职意向文字

--- a/app/src/main/res/values/prompt.xml
+++ b/app/src/main/res/values/prompt.xml
@@ -17,4 +17,7 @@
     <!--TrpMainBodyFragment-->
     <string name="accoutEmpty">账号不存在</string>
     <string name="notGetMoth">验证码获取失败</string>
+
+    <!--JlMainBodyFragment-->
+    <string name="stateNumberError">就職希望は最大３つ追加できます</string>
 </resources>
