--- a/messagelist/src/main/res/layout/item_receive_photo.xml
+++ b/messagelist/src/main/res/layout/item_receive_photo.xml
@@ -31,13 +31,12 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:adjustViewBounds="true"
-            android:background="#000"
             android:maxHeight="200dp"
             android:maxWidth="200dp"
             android:layout_below="@id/aurora_tv_msgitem_receiver_display_name"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/aurora_iv_msgitem_avatar"
-            android:src="@drawable/aurora_picture_not_found"
+            android:src="@drawable/no_pic_show"
             android:padding="0dp"
 
             app:photoMessageRadius="8dp"
