--- a/app/src/main/res/values/prompt.xml
+++ b/app/src/main/res/values/prompt.xml
@@ -16,9 +16,50 @@
   <string name="sendResumeError">发送简历失败</string>
 
     <!--TrpMainBodyFragment-->
-    <string name="accoutEmpty">账号不存在</string>
+    <string name="accoutEmpty">該当アカウントは存在しません</string>
     <string name="notGetMoth">验证码获取失败</string>
 
     <!--JlMainBodyFragment-->
     <string name="stateNumberError">就職希望は最大３つ追加できます</string>
+
+    <!--IiMainBodyFragment-->
+    <string name="IiResumeFail">创建个人线上简历失败</string>
+    <string name="IiStateFail">创建工作状态失败</string>
+    <string name="IiPhoneOrEmailRepeat">电话或者邮箱已注册，请检查！！</string>
+    <string name="IiCreatedFail">创建失败，请稍后重试！！</string>
+
+    <!--PfourMainBodyFragment-->
+    <string name="pfIntenSuccess">创建工作期望成功</string>
+    <string name="pfIntenFail">创建工作期望失败</string>
+
+    <!--PthreeMainBodyFragment-->
+    <string name="pthWorkSuccess">创建工作经历成功</string>
+    <string name="pthWorkFail">创建工作经历失败</string>
+
+    <!--PtwoMainBodyFragment-->
+    <string name="ptEducationSuccess">创建教育经历成功</string>
+    <string name="ptEducationFail">创建教育经历失败</string>
+
+    <!--RlMainBodyFragment-->
+    <string name="rlGetResumeFail">获取简历信息失败</string>
+    <string name="rlResumeCreatedSuccess">简历创建成功</string>
+    <string name="rlResumeCreatedFail">简历创建失败</string>
+
+    <!--SrMainBodyFragment-->
+    <string name="srEmail">邮箱不可为空,且格式必须正确</string>
+
+    <!--FaMainBodyFragment-->
+    <string name="faStateChangeSuccess">状态变更成功</string>
+    <string name="faStateChangeFail">状态变更失败，请重试</string>
+    <string name="faFindIntenFail">面试信息获取出错</string>
+    <string name="faFindAddressFail">地址信息获取出错</string>
+    <string name="faFindPositionFail">职位信息获取出错</string>
+    <string name="faFindCompanyFail">公司信息获取出错</string>
+
+    <!--FlMainBodyFragment-->
+    <string name="flFindPersonFail">获取发布者信息出错</string>
+
+    <!--piMainBodyFragment-->
+    <string name="piPersonCreateFail">创建个人信息出错</string>
+    <string name="piPersonUpdateFail">更新个人信息出错</string>
 </resources>
