--- a/app/src/main/res/layout/collection_company.xml
+++ b/app/src/main/res/layout/collection_company.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
                 android:textSize="17sp"
-                android:text="删除收藏"/>
+                android:text="削除"/>
     </RelativeLayout>
 
     <LinearLayout
