--- a/messagelist/src/main/res/layout/communication.xml
+++ b/messagelist/src/main/res/layout/communication.xml
@@ -1,105 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/communication_parent"
-    style="@style/aurora_msgitem_receive_style">
+              android:id="@+id/communication_parent"
+              style="@style/aurora_msgitem_receive_style">
 
 
     <cn.jiguang.imui.view.RoundTextView
-        android:id="@+id/aurora_tv_msgitem_date"
-        style="@style/aurora_msgitem_date_style" />
+            android:id="@+id/aurora_tv_msgitem_date"
+            style="@style/aurora_msgitem_date_style"/>
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
 
         <cn.jiguang.imui.view.RoundImageView
-            android:id="@+id/aurora_iv_msgitem_avatar_receive"
-            style="@style/aurora_msgitem_receiver_avatar_style"
-            android:contentDescription="@string/aurora_avatar_desc" />
+                android:id="@+id/aurora_iv_msgitem_avatar_receive"
+                style="@style/aurora_msgitem_receiver_avatar_style"
+                android:contentDescription="@string/aurora_avatar_desc"/>
 
         <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:gravity="top"
-                android:orientation="horizontal">
+                    android:id="@+id/messageBody"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:gravity="top"
+                    android:orientation="horizontal">
 
 
                 <ImageView
-                    android:id="@+id/communication_type"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ico_phone" />
+                        android:id="@+id/communication_type"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/ico_phone"/>
 
                 <TextView
-                    android:id="@+id/communication_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:gravity="center_vertical"
-                    android:letterSpacing="0.05"
-                    android:text=""
-                    android:textColor="#333"
-                    android:textSize="14sp" />
+                        android:id="@+id/communication_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12dp"
+                        android:gravity="center_vertical"
+                        android:letterSpacing="0.05"
+                        android:text=""
+                        android:textColor="#333"
+                        android:textSize="14sp"/>
 
             </LinearLayout>
 
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="#d8d8d8" />
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="1dp"
+                    android:layout_marginRight="1dp"
+                    android:background="#d8d8d8"/>
 
 
             <LinearLayout
-                android:id="@+id/buttonParent"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:orientation="horizontal">
+                    android:id="@+id/buttonParent"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/exchangeRefuse"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:letterSpacing="0.1"
-                    android:text="拒否"
-                    android:textColor="#333"
-                    android:textSize="15sp" />
+                        android:id="@+id/exchangeRefuse"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:letterSpacing="0.1"
+                        android:text="拒否"
+                        android:textColor="#333"
+                        android:textSize="15sp"/>
 
                 <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="#d8d8d8" />
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="#d8d8d8"/>
 
 
                 <TextView
-                    android:id="@+id/exchangeReceive"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:letterSpacing="0.1"
-                    android:text="同意"
-                    android:textColor="#FFB706"
-                    android:textSize="15sp" />
+                        android:id="@+id/exchangeReceive"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:letterSpacing="0.1"
+                        android:text="同意"
+                        android:textColor="#FFB706"
+                        android:textSize="15sp"/>
 
             </LinearLayout>
 
@@ -107,10 +108,10 @@
 
 
         <cn.jiguang.imui.view.RoundImageView
-            android:id="@+id/aurora_iv_msgitem_avatar_send"
-            style="@style/aurora_msgitem_sender_avatar_style"
-            android:contentDescription="@string/aurora_avatar_desc"
-            android:visibility="gone" />
+                android:id="@+id/aurora_iv_msgitem_avatar_send"
+                style="@style/aurora_msgitem_sender_avatar_style"
+                android:contentDescription="@string/aurora_avatar_desc"
+                android:visibility="gone"/>
 
 
     </LinearLayout>
