--- a/messagelist/src/main/res/layout/interview_result.xml
+++ b/messagelist/src/main/res/layout/interview_result.xml
@@ -37,7 +37,7 @@
             android:layout_width="20dp"
             android:layout_height="80dp"
             android:layout_marginLeft="15dp"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:paddingTop="5dp"
             android:lineSpacingMultiplier="0.9"
             android:text=""
