--- a/app/src/main/res/values/prompt.xml
+++ b/app/src/main/res/values/prompt.xml
@@ -9,11 +9,11 @@
     <string name="piBrahmaEmpty">Line账号不可为空</string>
 
    <!--ResumeListActivity-->
-    <string name="resumeReNameError">简历更名出错</string>
+    <string name="resumeReNameError">リネーム失敗しました</string>
 
    <!--SendResumeActivity-->
-  <string name="sendResumeResult">履歴書送信が成功しました1/4</string>
-  <string name="sendResumeError">发送简历失败</string>
+  <string name="sendResumeResult">自作の履歴書送信が成功しました</string>
+  <string name="sendResumeError">自作の履歴書送信が失敗しました</string>
 
     <!--TrpMainBodyFragment-->
     <string name="accoutEmpty">該当アカウントは存在しません</string>
@@ -23,41 +23,41 @@
     <string name="stateNumberError">就職希望は最大３つ追加できます</string>
 
     <!--IiMainBodyFragment-->
-    <string name="IiResumeFail">创建个人线上简历失败</string>
-    <string name="IiStateFail">创建工作状态失败</string>
-    <string name="IiPhoneOrEmailRepeat">电话或者邮箱已注册，请检查！！</string>
-    <string name="IiCreatedFail">创建失败，请稍后重试！！</string>
+    <string name="IiResumeFail">履歴書新規失敗</string>
+    <string name="IiStateFail">求職ステータス更新成功</string>
+    <string name="IiPhoneOrEmailRepeat">電話番号或いはメールアドレスは既に登録されましたので、改めて入力してください</string>
+    <string name="IiCreatedFail">新規失敗、後ほどもう一回試してください</string>
 
     <!--PfourMainBodyFragment-->
-    <string name="pfIntenSuccess">创建工作期望成功</string>
-    <string name="pfIntenFail">创建工作期望失败</string>
+    <string name="pfIntenSuccess">就職希望新規成功</string>
+    <string name="pfIntenFail">就職希望新規失敗</string>
 
     <!--PthreeMainBodyFragment-->
-    <string name="pthWorkSuccess">创建工作经历成功</string>
-    <string name="pthWorkFail">创建工作经历失败</string>
+    <string name="pthWorkSuccess">職務経歴新規成功</string>
+    <string name="pthWorkFail">職務経歴新規失敗</string>
 
     <!--PtwoMainBodyFragment-->
-    <string name="ptEducationSuccess">创建教育经历成功</string>
-    <string name="ptEducationFail">创建教育经历失败</string>
+    <string name="ptEducationSuccess">学歴新規成功</string>
+    <string name="ptEducationFail">学歴新規失敗</string>
 
     <!--RlMainBodyFragment-->
-    <string name="rlGetResumeFail">获取简历信息失败</string>
-    <string name="rlResumeCreatedSuccess">简历创建成功</string>
-    <string name="rlResumeCreatedFail">简历创建失败</string>
+    <string name="rlGetResumeFail">履歴書取得失敗</string>
+    <string name="rlResumeCreatedSuccess">自作の履歴書新規成功</string>
+    <string name="rlResumeCreatedFail">自作の履歴書新規失敗</string>
 
     <!--SrMainBodyFragment-->
-    <string name="srEmail">邮箱不可为空,且格式必须正确</string>
+    <string name="srEmail">正しいメールアドレスを入力してください</string>
 
     <!--FaMainBodyFragment-->
-    <string name="faStateChangeSuccess">状态变更成功</string>
-    <string name="faStateChangeFail">状态变更失败，请重试</string>
-    <string name="faFindIntenFail">面试信息获取出错</string>
-    <string name="faFindAddressFail">地址信息获取出错</string>
-    <string name="faFindPositionFail">职位信息获取出错</string>
-    <string name="faFindCompanyFail">公司信息获取出错</string>
+    <string name="faStateChangeSuccess">求職ステータス更新成功</string>
+    <string name="faStateChangeFail">求職ステータス更新失敗、後ほどもう一回試してください</string>
+    <string name="faFindIntenFail">面接情報取得失敗</string>
+    <string name="faFindAddressFail">住所取得失敗</string>
+    <string name="faFindPositionFail">求人情報取得失敗</string>
+    <string name="faFindCompanyFail">会社情報取得失敗</string>
 
     <!--FlMainBodyFragment-->
-    <string name="flFindPersonFail">获取发布者信息出错</string>
+    <string name="flFindPersonFail">募集側名称取得失敗</string>
 
     <!--piMainBodyFragment-->
     <string name="piPersonCreateFail">创建个人信息出错</string>
