--- a/chatinput/src/main/res/layout/layout_chatinput_emoji.xml
+++ b/chatinput/src/main/res/layout/layout_chatinput_emoji.xml
@@ -60,7 +60,7 @@
                     android:layout_height="match_parent"
                     android:textSize="13sp"
                     android:textColor="#FFB706"
-                    android:text="搜藏"
+                    android:text="お気に入りに追加"
                     android:gravity="center_vertical"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
@@ -75,7 +75,7 @@
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:textColor="#FFB706"
-                android:text="发送"
+                android:text="送信"
                 android:gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
