--- a/chatinput/src/main/res/layout/menu_item_photo.xml
+++ b/chatinput/src/main/res/layout/menu_item_photo.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:gravity="center"
                 android:layout_height="17dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:text="アルバム"
                 android:textSize="12sp"
                 android:textColor="#666"
