[Update]修改举报,修改聊天页面的软键盘问题

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -203,7 +203,7 @@
             </LinearLayout>
 
 
-            <LinearLayout
+            <github.ll.view.FloatOnKeyboardLayout
                 android:id="@+id/bottomPartContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -279,7 +279,7 @@
                     <!--</ScrollView>-->
 
                 </imui.jiguang.cn.imuisample.views.ChatView>
-            </LinearLayout>
+            </github.ll.view.FloatOnKeyboardLayout>
         </LinearLayout>
 
     </FrameLayout>
