--- a/chatinput/src/main/res/layout/layout_chatinput_emoji.xml
+++ b/chatinput/src/main/res/layout/layout_chatinput_emoji.xml
@@ -54,13 +54,16 @@
                 android:orientation="horizontal"
                 >
 
+
+                <!--android:text="お気に入りに追加"-->
+
                 <TextView
                     android:id="@+id/soucang"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textSize="13sp"
                     android:textColor="#FFB706"
-                    android:text="お気に入りに追加"
+
                     android:gravity="center_vertical"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
