--- a/messagelist/src/main/res/values/colors.xml
+++ b/messagelist/src/main/res/values/colors.xml
@@ -22,6 +22,6 @@
     <color name="aurora_video_message_duration_text_color">#545454</color>
 
 
-    <color name="grayee">#eeeeee</color>
-
+    <color name="grayFE">#FEFEFE</color>
+    <color name="grayCE">#CECECE</color>
 </resources>
