debug聊天界面的简历选择

--- a/app/src/main/res/layout/resume_menu.xml
+++ b/app/src/main/res/layout/resume_menu.xml
@@ -1,36 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#00ffffff"
-    android:orientation="vertical">
-
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#00ffffff"
+              android:orientation="vertical">
 
 
     <LinearLayout
-        android:id="@+id/resume_item_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#00ffffff"
-        android:gravity="bottom"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="#00ffffff"
+            android:gravity="bottom"
+            android:orientation="vertical">
 
+
+        <LinearLayout
+                android:id="@+id/resume_item_container"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:background="#ffffff"
+                android:orientation="vertical">
+
+
+            <TextView
+                    android:id="@+id/noDataShow"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textColor="@color/black20"
+                    android:text="読み込み中..."
+                    android:textSize="15sp"/>
+
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
 
 
-
     <TextView
-        android:id="@+id/resume_send_button"
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="送信"
-        android:background="@color/themeColor"
-        android:textSize="15sp" />
+            android:id="@+id/resume_send_button"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:text="送信"
+            android:background="@color/themeColor"
+            android:textSize="15sp"/>
 
 </LinearLayout>
 
