--- a/app/src/main/res/values/prompt.xml
+++ b/app/src/main/res/values/prompt.xml
@@ -75,7 +75,8 @@
     <string name="deleteFail">削除が失敗しました</string>
     <string name="createFail">追加が失敗しました</string>
     <string name="updateFail">更新が失敗しました</string>
-  <string name="endOrStartOne">初就職年月を生年月日より遅く設定してください</string>
-  <string name="endOrStartThree">初就職年月を生年月日より遅く設定してください</string>
-  <string name="endOrStartTwo">卒業時間を入学時間より遅く設定してください</string>
+    <string name="endOrStartOne">初就職年月を生年月日より遅く設定してください</string>
+    <string name="endOrStartThree">初就職年月を生年月日より遅く設定してください</string>
+    <string name="endOrStartTwo">卒業時間を入学時間より遅く設定してください</string>
+    <string name="typeNull">選択仕事タイプ</string>
 </resources>
