--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,7 +34,7 @@
     <color name="grayB3">#B3B3B3</color>
     <color name="grayCD">#CDCDCD</color>
     <color name="grayd5">#d5d5d5</color>
-    <color name="grayF6">#F6F6F6</color>
+    <color name="grayF6">#FFF6F6F6</color>
     <color name="grayE6">#E6E6E6</color>
     <color name="blue007AFF">#007AFF</color>
     <color name="blue0097D6">#0097D6</color>
