--- a/chatinput/src/main/res/layout/menu_item_voice.xml
+++ b/chatinput/src/main/res/layout/menu_item_voice.xml
@@ -1,25 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/aurora_ll_menuitem_voice_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:tag="voice"
-        android:layout_weight="1"
-        android:gravity="center">
+              android:id="@+id/aurora_ll_menuitem_voice_container"
+              android:layout_width="wrap_content"
+              android:tag="voice"
+              android:layout_height="wrap_content"
+              android:gravity="center">
 
-        <FrameLayout
+
+    <LinearLayout
             android:id="@+id/aurora_framelayout_menuitem_voice"
-            android:layout_width="48dp"
-            android:layout_height="48dp">
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:orientation="vertical"
 
-            <ImageButton
+            android:layout_height="wrap_content">
+
+
+        <ImageButton
                 android:id="@+id/aurora_menuitem_ib_voice"
                 style="@style/ChatInputIcon"
                 android:layout_gravity="center"
                 android:background="@android:color/transparent"
                 android:clickable="false"
-                android:src="@drawable/aurora_menuitem_mic"/>
-        </FrameLayout>
+                android:layout_marginBottom="2dp"
+                android:src="@drawable/micphone"
+        />
 
+
+
+        <TextView
+                android:gravity="center"
+                android:layout_height="17dp"
+                android:layout_width="wrap_content"
+                android:text="マイク"
+                android:textSize="12sp"
+                android:textColor="#666"
+        />
+
+    </LinearLayout>
 
 </LinearLayout>
