--- a/chatinput/src/main/res/layout/view_chatinput.xml
+++ b/chatinput/src/main/res/layout/view_chatinput.xml
@@ -58,6 +58,12 @@
         <!--android:maxLines="4"-->
 
         <cn.jiguang.imui.chatinput.emoji.widget.EmoticonsEditText
+
+
+
+                android:inputType="textMultiLine"
+                android:maxLines="5"
+
                 android:id="@+id/aurora_et_chat_input1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -69,7 +75,11 @@
                 android:gravity="bottom"
                 android:hint="新着メッセージ"
                 android:imeOptions="actionSend"
-                android:singleLine="true"
+
+
+                android:singleLine="false"
+
+
                 android:minHeight="48dp"
                 android:paddingLeft="4dp"
                 android:paddingTop="5dp"
@@ -91,12 +101,7 @@
         >
 
 
-            <ImageView
-                    android:id="@+id/menuItemVoice"
-                    android:layout_width="27dp"
-                    android:layout_height="27dp"
-                    android:layout_marginRight="15dp"
-                    android:src="@drawable/ico_voice"/>
+
 
             <ImageView
                     android:id="@+id/menuItemSmile"
@@ -115,6 +120,29 @@
                     android:layout_marginRight="15dp"
                     android:src="@drawable/ico_add"
 
+            />
+
+            <!--<ImageView-->
+                    <!--android:id="@+id/menuItemVoice"-->
+                    <!--android:layout_width="27dp"-->
+                    <!--android:layout_height="27dp"-->
+                    <!--android:layout_marginRight="15dp"-->
+                    <!--android:src="@drawable/ico_voice"/>-->
+
+
+
+
+            <TextView
+                    android:id="@+id/messageSend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="28dp"
+                    android:layout_marginRight="15dp"
+                    android:background="@drawable/radius_button_theme"
+                    android:gravity="center"
+                    android:text="送信"
+                    android:textColor="@color/white"
+                    android:textSize="13sp"
+                    android:padding="5dp"
             />
 
 
