--- a/app/src/main/res/values/prompt.xml
+++ b/app/src/main/res/values/prompt.xml
@@ -79,4 +79,7 @@
     <string name="endOrStartThree">初就職年月を生年月日より遅く設定してください</string>
     <string name="endOrStartTwo">卒業時間を入学時間より遅く設定してください</string>
     <string name="typeNull">選択仕事タイプ</string>
+
+    <!--JlmainBodyFragment-->
+    <string name="getInitFail">就職希望取得エラー</string>
 </resources>
