聊天界面简历获取优化，面试信息获取

--- a/app/src/main/res/layout/resume_menu.xml
+++ b/app/src/main/res/layout/resume_menu.xml
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:textColor="@color/white"
             android:text="送信"
-            android:background="@color/themeColor"
+            android:background="@color/grayd5"
             android:textSize="15sp"/>
 
 </LinearLayout>
