--- a/messagelist/src/main/res/layout/item_receive_photo.xml
+++ b/messagelist/src/main/res/layout/item_receive_photo.xml
@@ -38,7 +38,7 @@
             android:layout_toRightOf="@id/aurora_iv_msgitem_avatar"
             android:src="@drawable/no_pic_show"
             android:padding="0dp"
-
+            android:background="#eee"
             app:photoMessageRadius="8dp"
             />
 
