--- a/app/src/main/res/layout/collection_company.xml
+++ b/app/src/main/res/layout/collection_company.xml
@@ -42,7 +42,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginLeft="15dp">
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp">
             <TextView
                     android:id="@+id/texttop"
                     android:layout_width="wrap_content"
